frontend - fixed image size ( #spentTwoHoursAligningDivs)

--- a/frontend/src/app/components/recipe/recipe.component.css
+++ b/frontend/src/app/components/recipe/recipe.component.css
@@ -7,10 +7,6 @@
   margin-bottom: 0;
 }
 
-.row {
-  height:84vh;
-}
-
 #col-description {
   border-right: 4px solid #00425a;
   display:flex;
@@ -20,15 +16,21 @@
   padding:0;
 }
 
-#dish-img {
-  height: 70vh;
-  overflow: hidden;
-  width: 100%;
+.container-fluid {
+  height: 100%;
 }
 
-#dish-title {
-  position: relative;
-  top:5%;
+#dish-img {
+  overflow: hidden;
+  min-width: 100%;
+  min-height: 70%;
+  max-width: 100%;
+  max-height: 70%;
+}
+
+#img {
+  width: 100%;
+  height: 100%;
 }
 
 .col {
